--- a/app/src/main/res/layout/item_profile.xml
+++ b/app/src/main/res/layout/item_profile.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/profile_item_root_layout"
     android:layout_width="match_parent"
-    android:layout_height="88dp"
+    android:layout_height="72dp"
     android:orientation="horizontal"
     tools:context="org.collapsed.ssuparty_android.ui.main.MainActivity">
 
@@ -13,57 +13,61 @@
     <ImageView
         android:id="@+id/profile_item_image"
         android:layout_width="56dp"
-        android:layout_height="88dp"
-        android:layout_marginLeft="16dp"
+        android:layout_height="match_parent"
         android:layout_centerInParent="true"
-        android:src="@drawable/profile_man"
-        />
+        android:layout_marginLeft="8dp"
+        android:src="@drawable/profile_man" />
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="88dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        >
+        android:layout_height="70dp"
+        android:layout_gravity="center_vertical"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp">
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="8dp"
-            android:orientation="vertical"
-            android:layout_gravity="center">
+            android:layout_gravity="center"
+            android:paddingLeft="8dp">
 
             <TextView
                 android:id="@+id/profile_item_nickname_txt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
                 android:layout_marginBottom="8dp"
                 android:text="닉네임"
-                android:textColor="#493169"
-                android:textSize="16sp" />
+                android:textColor="#000000"
+                android:textSize="16sp"
+                android:textStyle="bold" />
 
-            <TextView
-                android:id="@+id/profile_item_carrer_txt"
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
                 android:layout_below="@id/profile_item_nickname_txt"
-                android:text="경력"
-                android:textColor="#703a7f"
-                android:textSize="16sp" />
+                android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/profile_item_education_txt"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/profile_item_carrer_txt"
-                android:layout_centerVertical="true"
-                android:text="학력"
-                android:textColor="#ba88c8"
-                android:textSize="16sp" />
+                <TextView
+                    android:id="@+id/profile_item_major_txt"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="8dp"
+                    android:text="컴퓨터"
+                    android:textColor="#000000"
+                    android:textSize="16sp" />
 
+                <TextView
+                    android:id="@+id/profile_item_grade_txt"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="5dp"
+                    android:text="1학년"
+                    android:textColor="#000000"
+                    android:textSize="16sp" />
 
-        </LinearLayout>
+            </LinearLayout>
+        </RelativeLayout>
     </android.support.v7.widget.CardView>
 
 </LinearLayout>
