--- a/app/src/main/res/layout/fragment_partylist.xml
+++ b/app/src/main/res/layout/fragment_partylist.xml
@@ -15,7 +15,7 @@
             android:layout_height="match_parent">
 
             <android.support.v7.widget.RecyclerView
-                android:id="@+id/partylist_recycler_view"
+                android:id="@+id/partylist_list"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
 
