--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -59,10 +59,16 @@
         <item name="android:dividerHeight">0.5dp</item>
     </style>
 
+    <style name="ProfileCardViewTheme">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">80dp</item>
+        <item name="android:layout_margin">8dp</item>
+    </style>
+
     <declare-styleable name="CustomTextView">
-        <attr name="customFont" format="string"/>
+        <attr name="customFont" format="string" />
     </declare-styleable>
-        
+
 
     <style name="SSUPartyTheme.NoActionBar.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
