--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -23,7 +23,7 @@
                 android:orientation="vertical">
 
                 <com.makeramen.roundedimageview.RoundedImageView
-                    android:id="@+id/profile_user_image_rouded_img"
+                    android:id="@+id/profile_user_image"
                     android:layout_width="100dp"
                     android:layout_height="100dp"
                     android:layout_gravity="center_horizontal"
