--- a/app/src/main/res/layout/activity_createparty.xml
+++ b/app/src/main/res/layout/activity_createparty.xml
@@ -173,9 +173,11 @@
                     <TextView
                         android:id="@+id/createparty_select_deadline_txt"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="match_parent"
                         android:layout_gravity="center_vertical"
-                        android:layout_margin="6dp"
+                        android:gravity="center_vertical"
+                        android:layout_marginLeft="6dp"
+                        android:layout_marginRight="6dp"
                         android:clickable="true"
                         android:drawablePadding="8dp"
                         android:drawableRight="@drawable/cal"
