--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#a25efc</color>
     <color name="colorPrimaryDark">#8b5df9</color>
-    <color name="colorAccent">#bcb5e1</color>
+    <color name="colorAccent">#76f1f9 </color>
     <color name="colorWhite">#ffffffff</color>
 
     <color name="sky_blue2">#66b8ff</color>
