--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,63 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="org.collapsed.ssuparty_android.ui.main.MainActivity">
 
-    <RelativeLayout
+    <org.collapsed.ssuparty_android.ui.customview.MainViewPager
+        android:id="@+id/main_pager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/main_bottom_navigation"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/main_toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:background="@color/colorPrimary"
-            android:elevation="3dp">
 
-            <org.collapsed.ssuparty_android.ui.customview.CustomFontTextView
-                android:id="@+id/main_toolbar_title_txt"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginRight="16dp"
-                android:text="@string/app_name"
-                android:textColor="@color/colorWhite"
-                android:textSize="20sp"
-                app:customFont="@string/naum_square_bold" />
-        </android.support.v7.widget.Toolbar>
+    <android.support.design.widget.BottomNavigationView
+        android:id="@+id/main_bottom_navigation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        app:elevation="3dp"
+        app:itemBackground="@color/colorWhite"
+        app:itemIconTint="@color/bottom_navi_selector"
+        app:itemTextColor="@color/bottom_navi_selector"
+        app:menu="@menu/bottom_navigation">
 
-        <org.collapsed.ssuparty_android.ui.customview.MainViewPager
-            android:id="@+id/main_pager"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_above="@+id/main_bottom_navigation"
-            android:layout_below="@id/main_toolbar"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="2dp"
-            android:layout_above="@id/main_bottom_navigation"
-            android:background="#ffeeeeee">
-
-        </LinearLayout>
-
-        <android.support.design.widget.BottomNavigationView
-            android:id="@+id/main_bottom_navigation"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            app:elevation="3dp"
-            app:itemBackground="@color/colorWhite"
-            app:itemIconTint="@color/bottom_navi_selector"
-            app:itemTextColor="@color/bottom_navi_selector"
-            app:menu="@menu/bottom_navigation">
-
-        </android.support.design.widget.BottomNavigationView>
-    </RelativeLayout>
-
-</android.support.constraint.ConstraintLayout>
+    </android.support.design.widget.BottomNavigationView>
+</RelativeLayout>
