--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -16,4 +16,6 @@
     <dimen name="createactivity_hint_marginTop">10dp</dimen>
     <dimen name="createactivity_hint_TextSize">21sp</dimen>
 
+    <dimen name="title_text_size">14sp</dimen>
+    <dimen name="secondary_text_size">10sp</dimen>
 </resources>
