--- a/app/src/main/res/menu/bottom_navigation.xml
+++ b/app/src/main/res/menu/bottom_navigation.xml
@@ -18,4 +18,11 @@
         android:icon="@drawable/ic_search_white_24dp"
         android:title="@string/section_allparty_title"
         app:showAsAction="ifRoom" />
+
+    <item
+        android:id="@+id/bn_profile"
+        android:enabled="true"
+        android:icon="@drawable/ic_person_white_24dp"
+        android:title="@string/section_profile_title"
+        app:showAsAction="ifRoom" />
 </menu>
