--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -251,6 +251,11 @@
                         app:tag_vertical_padding="6dp"
                         app:vertical_interval="10dp" />
 
+                    <!--<me.gujun.android.taggroup.TagGroup
+                        android:id="@+id/profile_tag_layout"
+                        android:layout_width="match_parent"
+                        android:layout_height="80dp"/>-->
+
                 </LinearLayout>
             </android.support.v7.widget.CardView>
 
