--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -29,12 +29,10 @@
 
         </RelativeLayout>
 
-
         <LinearLayout
             android:id="@+id/profile_top_content_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="15dp"
             android:layout_marginTop="15dp"
             android:orientation="vertical">
 
@@ -47,14 +45,14 @@
                 android:clickable="true"
                 android:src="@drawable/camera"
                 app:civ_border_width="1dp"
-                app:civ_border_color="#cbc1f2"/>
+                app:civ_border_color="#00FF0000"/>
 
             <TextView
                 android:id="@+id/profile_nickname_txt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginTop="5dp"
+                android:layout_marginTop="15dp"
                 android:text="User1234" />
 
             <LinearLayout
@@ -158,11 +156,12 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_centerVertical="true"
-                            android:layout_marginLeft="8dp"
+                            android:layout_marginTop="12dp"
+                            android:layout_marginLeft="12dp"
                             android:background="@android:color/transparent"
                             android:text="소개"
                             android:textColor="#000000"
-                            android:textSize="14sp"
+                            android:textSize="16sp"
                             android:textStyle="bold" />
 
                         <ImageButton
@@ -179,9 +178,8 @@
                         <TextView
                             android:id="@+id/profile_intro_content_txt"
                             android:layout_width="match_parent"
-                            android:layout_marginLeft="30dp"
-                            android:layout_marginRight="30dp"
-                            android:layout_marginTop="10dp"
+                            android:layout_marginLeft="12dp"
+                            android:layout_marginRight="12dp"
                             android:layout_marginBottom="10dp"
                             android:layout_height="80dp"
                             android:textSize="12sp" />
@@ -205,11 +203,12 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_centerVertical="true"
-                            android:layout_marginLeft="8dp"
+                            android:layout_marginLeft="12dp"
+                            android:layout_marginTop="12dp"
                             android:background="@android:color/transparent"
                             android:text="보유기술"
                             android:textColor="#000000"
-                            android:textSize="14sp"
+                            android:textSize="16sp"
                             android:textStyle="bold" />
 
                         <ImageButton
@@ -227,12 +226,14 @@
                         android:id="@+id/profile_tag_layout"
                         android:layout_width="match_parent"
                         android:layout_height="80dp"
-                        android:padding="6dp"
+                        android:padding="12dp"
                         app:atg_isAppendMode="true"
                         app:atg_textSize="12sp"
                         app:atg_borderColor="#d7d0f9"
                         app:atg_backgroundColor="#d7d0f9"
-                        app:atg_textColor="#939297"
+                        app:atg_textColor="#000000"
+                        app:atg_inputHintColor="#828282"
+                        app:atg_inputTextColor="#000000"
                         app:atg_inputHint="내용입력"/>
 
                 </LinearLayout>
