--- a/app/src/main/res/layout/item_party.xml
+++ b/app/src/main/res/layout/item_party.xml
@@ -4,75 +4,70 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/party_item_root_layout"
     android:layout_width="match_parent"
-    android:layout_height="91dp"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
     tools:context="org.collapsed.ssuparty_android.ui.main.MainActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="64dp">
 
         <RelativeLayout
             android:id="@+id/party_item_top_layout"
             android:layout_width="match_parent"
-            android:layout_height="30dp"
-            android:layout_marginTop="15dp"
-            android:paddingLeft="15dp"
-            android:paddingRight="15dp">
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="4dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp">
+
+            <TextView
+                android:id="@+id/party_item_title_txt"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="공모전타이틀"
+                android:textSize="16sp"
+                android:textColor="#000000"/>
 
             <TextView
                 android:id="@+id/party_item_category_txt"
                 android:layout_width="wrap_content"
-                android:layout_height="30dp"
-                android:layout_marginRight="15dp"
-                android:text="공모전"
-                android:textSize="15sp"
-                android:textColor="#493169"/>
-
-            <TextView
-                android:id="@+id/party_item_deadline_txt"
-                android:layout_width="wrap_content"
-                android:layout_height="30dp"
-                android:layout_toRightOf="@id/party_item_category_txt"
-                android:layout_marginRight="15dp"
-                android:text="D - 28"
-                android:textColor="#703a7f"
-                android:textSize="15sp" />
-
-            <TextView
-                android:id="@+id/party_item_tag_txt"
-                android:layout_width="wrap_content"
-                android:layout_height="30dp"
-                android:layout_toRightOf="@id/party_item_deadline_txt"
-                android:text="태그"
-                android:textSize="15sp"
-                android:textColor="#ba88c8"/>
-
-            <TextView
-                android:id="@+id/party_item_member_num_txt"
-                android:layout_width="wrap_content"
-                android:layout_height="30dp"
+                android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
-                android:text="5/10"
-                android:textColor="#969599"
-                android:textSize="15sp" />
+                android:text="공모전"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                android:textColor="#437291"/>
 
         </RelativeLayout>
 
         <RelativeLayout
             android:id="@+id/party_item_bottom_layout"
             android:layout_width="match_parent"
-            android:layout_height="30dp"
+            android:layout_height="wrap_content"
             android:layout_below="@id/party_item_top_layout"
-            android:layout_marginBottom="15dp"
-            android:paddingLeft="15dp">
+            android:layout_marginRight="16dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginBottom="8dp">
+
+            <me.gujun.android.taggroup.TagGroup
+                android:id="@+id/party_item_tag_layout"
+                android:layout_width="wrap_content"
+                android:layout_height="26dp"
+                app:atg_textSize="12sp"
+                app:atg_borderColor="#d7d0f9"
+                app:atg_backgroundColor="#d7d0f9"
+                app:atg_textColor="#FFFFFF" />
 
             <TextView
-                android:id="@+id/party_item_title_txt"
-                android:layout_width="match_parent"
-                android:layout_height="30dp"
-                android:text="공모전타이틀"
-                android:textSize="25sp" />
+                android:id="@+id/party_item_member_num_txt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentBottom="true"
+                android:text="5/10"
+                android:textColor="#969599"
+                android:textSize="12sp" />
 
         </RelativeLayout>
 
