--- a/app/src/main/res/layout/item_party.xml
+++ b/app/src/main/res/layout/item_party.xml
@@ -17,9 +17,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:layout_marginBottom="4dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp">
+            android:layout_marginBottom="4dp">
 
             <TextView
                 android:id="@+id/party_item_title_txt"
@@ -46,8 +44,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/party_item_top_layout"
-            android:layout_marginRight="16dp"
-            android:layout_marginLeft="16dp"
             android:layout_marginBottom="8dp">
 
             <me.gujun.android.taggroup.TagGroup
@@ -76,6 +72,6 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="#828282"/>
+        android:background="#d7d0f9"/>
 
 </LinearLayout>
