--- a/app/src/main/res/layout/fragment_partylist.xml
+++ b/app/src/main/res/layout/fragment_partylist.xml
@@ -3,13 +3,32 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingLeft="16dp"
-    android:paddingRight="16dp">
+    android:layout_height="match_parent">
+
+    <RelativeLayout
+        android:id="@+id/party_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="56dp"
+        android:background="#a15ffb">
+
+        <TextView
+            android:id="@+id/profile_title_txt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
+            android:text="파티 찾기 및 생성"
+            android:textColor="#ffffff"
+            android:textSize="15dp"
+            android:textStyle="bold" />
+
+    </RelativeLayout>
 
     <android.support.design.widget.CoordinatorLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_below="@id/party_toolbar">
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/partylist_list"
