--- a/app/src/main/res/layout/item_party.xml
+++ b/app/src/main/res/layout/item_party.xml
@@ -6,6 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
+    android:paddingLeft="16dp"
+    android:paddingRight="16dp"
     tools:context="org.collapsed.ssuparty_android.ui.main.MainActivity">
 
     <RelativeLayout
