--- a/app/src/main/res/layout/activity_party_detail.xml
+++ b/app/src/main/res/layout/activity_party_detail.xml
@@ -57,7 +57,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
-            android:text="소프트웨어 공모전 팀원모집"
+            android:text="운영체제 스터디 같이하실분"
             android:textColor="#706f74"
             android:textSize="16sp"
             android:textStyle="bold" />
@@ -105,7 +105,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
-            android:text="공모전"
+            android:text="스터디"
             android:textColor="#8b8a8d"
             android:textSize="12sp"
             android:textStyle="bold" />
@@ -137,7 +137,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
-            android:text="2017-09-23"
+            android:text="2017-10-04"
             android:textColor="#8b8a8d"
             android:textSize="14sp"
             android:textStyle="bold" />
@@ -169,7 +169,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
-            android:text="방학동안 소프트웨어 공모전 달리실 분 구합니다. 중도 하차 불가. 탈주시 박제해드립니다. ^오^"
+            android:text="홍지만 교수님의 운영체제를 같이 학습할 학우분들을 구합니다."
             android:textColor="#8b8a8d"
             android:textSize="12sp"
             android:textStyle="bold" />
@@ -210,7 +210,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="40dp"
                 android:gravity="center"
-                android:text="1 명 / 10 명"
+                android:text="5 명 / 10 명"
                 android:textSize="12sp"
                 android:textStyle="bold" />
         </LinearLayout>
