--- a/app/src/main/res/layout/activity_party_detail.xml
+++ b/app/src/main/res/layout/activity_party_detail.xml
@@ -102,6 +102,7 @@
         </LinearLayout>
 
         <TextView
+            android:id="@+id/party_detail_category_txt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
@@ -134,6 +135,7 @@
         </LinearLayout>
 
         <TextView
+            android:id="@+id/party_detail_deadline_txt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
@@ -166,6 +168,7 @@
         </LinearLayout>
 
         <TextView
+            android:id="@+id/party_detail_info_txt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
