--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -49,7 +49,7 @@
                 app:civ_border_color="#00FF0000"/>
 
             <TextView
-                android:id="@+id/profile_nickname_txt"
+                android:id="@+id/profile_name_txt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
