--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
+
         <variable
             name="view"
             type="org.collapsed.ssuparty_android.ui.home.HomeFragment" />
@@ -23,10 +24,10 @@
             android:layout_width="match_parent"
             android:layout_height="64dp"
             android:layout_centerInParent="true"
+            android:animateLayoutChanges="true"
             android:background="@android:color/transparent"
             android:paddingEnd="14dp"
             android:paddingStart="14dp"
-            android:animateLayoutChanges="true"
             app:contentInsetStart="0dp">
 
             <android.support.v7.widget.CardView
@@ -47,8 +48,8 @@
                         android:layout_weight="9"
                         android:background="@android:color/transparent"
                         android:hint="보유 기술 및 모임, 공모전 이름 검색"
-                        android:inputType="text"
                         android:imeOptions="actionSearch"
+                        android:inputType="text"
                         android:maxLines="1" />
 
                     <ImageView
@@ -75,6 +76,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="64dp"
+            android:fillViewport="true"
             android:visibility="gone">
 
 
@@ -110,11 +112,11 @@
                         android:textSize="@dimen/secondary_text_size" />
                 </RelativeLayout>
 
-                <include layout="@layout/layout_userprofile_row"
-                    android:id="@+id/home_userprofile_layout1"/>
-
-                <include layout="@layout/layout_userprofile_row"
-                    android:id="@+id/home_userprofile_layout2"/>
+                <ListView
+                    android:id="@+id/home_profile_list"
+                    android:layout_width="match_parent"
+                    android:layout_height="200dp"
+                    android:orientation="vertical" />
 
                 <include layout="@layout/divider" />
 
@@ -143,11 +145,10 @@
                         android:textSize="@dimen/secondary_text_size" />
                 </RelativeLayout>
 
-                <org.collapsed.ssuparty_android.ui.customview.NonScrollListView
-                    android:id="@+id/home_meetups_container"
+                <ListView
+                    android:id="@+id/home_party_list"
                     android:layout_width="match_parent"
-                    android:layout_height="300dp"
-                    android:entries="@array/signup_major"
+                    android:layout_height="200dp"
                     android:orientation="vertical" />
 
                 <include layout="@layout/divider" />
