--- a/app/src/main/res/layout/layout_userprofile_row.xml
+++ b/app/src/main/res/layout/layout_userprofile_row.xml
@@ -1,16 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="57dp"
+    android:layout_height="60dp"
     android:layout_marginTop="10dp"
     android:orientation="horizontal">
 
-    <ImageView
-        android:id="@+id/userprofile_image"
-        android:layout_width="46dp"
-        android:layout_height="46dp"
-        android:layout_gravity="center_vertical"
-        android:src="@drawable/man" />
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+        <org.collapsed.ssuparty_android.ui.customview.CircleImageView
+            android:id="@+id/userprofile_image"
+            android:layout_width="46dp"
+            android:layout_height="46dp"
+            android:layout_gravity="center_vertical"
+            android:src="@drawable/man" />
+
+        <TextView
+            android:id="@+id/userprofile_nick_txt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/userprofile_image"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="4dp"
+            android:textSize="10sp"
+            android:textColor="@color/secondaryTextPrimary"/>
+
+    </RelativeLayout>
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -18,33 +34,22 @@
         android:layout_marginStart="10dp">
 
         <TextView
-            android:id="@+id/userprofile_nick_indicate_txt"
+            android:id="@+id/userprofile_intro_txt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="12dp"
-            android:text="닉네임"
+            android:text="Bio : "
             android:textColor="@color/secondaryTextPrimary"
             android:textSize="10sp" />
 
         <TextView
-            android:id="@+id/userprofile_carrer_indicate_txt"
+            android:id="@+id/userprofile_email_txt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/userprofile_nick_indicate_txt"
+            android:layout_below="@id/userprofile_intro_txt"
             android:layout_marginStart="12dp"
             android:layout_marginTop="10dp"
-            android:text="경력사항"
-            android:textColor="@color/secondaryTextPrimary"
-            android:textSize="10sp" />
-
-        <TextView
-            android:id="@+id/userprofile_school_indicate_txt"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/userprofile_carrer_indicate_txt"
-            android:layout_marginStart="12dp"
-            android:layout_marginTop="10dp"
-            android:text="학력사항"
+            android:text="이메일 : "
             android:textColor="@color/secondaryTextPrimary"
             android:textSize="10sp" />
 
