모델링과 통합검색 결과뷰 연결 완료

--- a/app/src/main/res/layout/layout_userprofile_row.xml
+++ b/app/src/main/res/layout/layout_userprofile_row.xml
@@ -2,12 +2,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="60dp"
-    android:layout_marginTop="10dp"
     android:orientation="horizontal">
 
     <RelativeLayout
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical">
 
         <org.collapsed.ssuparty_android.ui.customview.CircleImageView
             android:id="@+id/userprofile_image"
@@ -17,7 +19,7 @@
             android:src="@drawable/man" />
 
         <TextView
-            android:id="@+id/userprofile_nick_txt"
+            android:id="@+id/userprofile_name_txt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/userprofile_image"
@@ -31,7 +33,8 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginStart="10dp">
+        android:layout_marginStart="10dp"
+        android:gravity="center_vertical">
 
         <TextView
             android:id="@+id/userprofile_intro_txt"
