--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -37,16 +36,15 @@
             android:layout_marginTop="8dp"
             android:orientation="vertical">
 
-            <org.collapsed.ssuparty_android.ui.customview.CircleImageView
-                xmlns:app="http://schemas.android.com/apk/res-auto"
+            <org.collapsed.ssuparty_android.ui.customview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:id="@+id/profile_user_image"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:layout_gravity="center_horizontal"
                 android:clickable="true"
                 android:src="@drawable/camera"
-                app:civ_border_width="1dp"
-                app:civ_border_color="#00FF0000"/>
+                app:civ_border_color="#00FF0000"
+                app:civ_border_width="1dp" />
 
             <TextView
                 android:id="@+id/profile_name_txt"
@@ -160,8 +158,8 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_centerVertical="true"
-                            android:layout_marginTop="12dp"
                             android:layout_marginLeft="12dp"
+                            android:layout_marginTop="12dp"
                             android:background="@android:color/transparent"
                             android:text="소개"
                             android:textColor="#000000"
@@ -179,14 +177,14 @@
 
                     </RelativeLayout>
 
-                        <TextView
-                            android:id="@+id/profile_intro_content_txt"
-                            android:layout_width="match_parent"
-                            android:layout_marginLeft="12dp"
-                            android:layout_marginRight="12dp"
-                            android:layout_marginBottom="10dp"
-                            android:layout_height="80dp"
-                            android:textSize="12sp" />
+                    <TextView
+                        android:id="@+id/profile_intro_content_txt"
+                        android:layout_width="match_parent"
+                        android:layout_height="80dp"
+                        android:layout_marginBottom="10dp"
+                        android:layout_marginLeft="12dp"
+                        android:layout_marginRight="12dp"
+                        android:textSize="12sp" />
 
                 </LinearLayout>
             </android.support.v7.widget.CardView>
@@ -231,14 +229,14 @@
                         android:layout_width="match_parent"
                         android:layout_height="74dp"
                         android:padding="12dp"
-                        app:atg_isAppendMode="true"
-                        app:atg_textSize="12sp"
-                        app:atg_borderColor="#d7d0f9"
                         app:atg_backgroundColor="#d7d0f9"
-                        app:atg_textColor="#000000"
+                        app:atg_borderColor="#d7d0f9"
+                        app:atg_inputHint="내용입력"
                         app:atg_inputHintColor="#828282"
                         app:atg_inputTextColor="#000000"
-                        app:atg_inputHint="내용입력"/>
+                        app:atg_isAppendMode="true"
+                        app:atg_textColor="#000000"
+                        app:atg_textSize="12sp" />
 
                 </LinearLayout>
             </android.support.v7.widget.CardView>
@@ -246,4 +244,3 @@
         </LinearLayout>
     </LinearLayout>
 </RelativeLayout>
-
